feat: listtrades grpc command #667
